# mcp-kubernetes-documentation

./: .mcp.json  CLAUDE.md  CODESTYLE.md  Dockerfile  Makefile  README.md  USAGE.md  pyproject.toml
src/mcp_kubernetes_documentation/: __init__.py  cli.py  database.py  indexer.py  models.py  parser.py  server.py
tests/: __init__.py  test_database.py  test_models.py  test_parser.py
